03.business-os/AICompanyManager/900.meta/r8_v7d_delete_confirm_visible_20260502_184510/020_node_check_after.txt
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:6731
    aicmOpenMajorItemDeleteConfirmR8P(deleteTarget);\n\n    if (typeof aicmScrollMajorDeleteConfirmIntoViewR8V7D === "function") {\n      setTimeout(aicmScrollMajorDeleteConfirmIntoViewR8V7D, 50);\n    }\n  }
                                                    ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
